[BUGFIX] RTE: Icons not centered on buttons in toolbar
Releases: master
Resolves: #64392
Reviewed-on: http://review.typo3.org/36150
Tested-by: Stanislas Rolland <typo3@sjbr.ca>

--- a/typo3/sysext/rtehtmlarea/Resources/Public/Css/Skin/htmlarea.css
+++ b/typo3/sysext/rtehtmlarea/Resources/Public/Css/Skin/htmlarea.css
@@ -69,25 +69,22 @@
 	background-color: transparent;
 	border-collapse: separate;
 	border-color: transparent;
+	border-radius: 2px;
 	border-style: solid;
 	border-width: 1px;
-	color: ButtonText;
 	cursor: pointer;
 	float: left;
 	height: 23px;
 	margin: 0 0 3px 0;
-	padding: 0;
+	width: 24px;
 }
 .htmlarea .toolbar .button button {
 	background-color: transparent;
 	border: 0 none;
 	cursor: pointer;
-	margin: 0;
+	display: block;
 	-moz-outline: 0 none;
 	outline: 0 none;
-	overflow: visible;
-	padding-left: 3px;
-	padding-right: 3px;
 }
 .htmlarea .toolbar .btn-text {
 	background-image: url("images/sprites/actions.png");
@@ -95,8 +92,7 @@
 	background-repeat: no-repeat;
 	width: 20px;
 	height: 18px;
-	padding: 0;
-	margin: 1px 0 1px 2px;
+	margin: 2px 0 1px 2px;
 }
 .htmlarea .toolbar .buttonHover {
 	background-color: #DCDCDC;
